Make GPR zoom more predictable (#339)