@@ -28,6 +28,7 @@ import javafx.application.Platform;
 import javafx.beans.value.ChangeListener;
 import javafx.beans.value.ObservableValue;
 import javafx.event.EventHandler;
+import javafx.geometry.Dimension2D;
 import javafx.geometry.Point2D;
 import javafx.scene.Cursor;
 import javafx.scene.Node;
@@ -149,11 +150,15 @@ public class GPRChart extends Chart {
     }
 
     public void setSize(int width, int height) {
+        Rectangle mainRect = profileField.getMainRect();
+        double viewWidthBefore = mainRect.getWidth();
+        double viewHeightBefore = mainRect.getHeight();
+
         this.width = width;
         this.height = height;
 
-        getField().setViewDimension(new Dimension((int) this.width, (int) this.height));
-        System.out.println("setSize: " + width + "x" + height);
+        getField().setViewDimension(new Dimension(this.width, this.height));
+        rescaleZoom(viewWidthBefore, viewHeightBefore);
         repaintEvent();
     }
 
@@ -221,9 +226,9 @@ public class GPRChart extends Chart {
                     1 / ASPECT_A);
 
             setRealAspect(realAspect);
-
         } else {
-            setZoom(getZoom() + ch);
+            double zoom = clampZoom(getZoom() + ch);
+            setZoom(zoom);
         }
 
         ////
@@ -239,6 +244,19 @@ public class GPRChart extends Chart {
 
         updateScroll();
         repaintEvent();
+    }
+
+    private double clampZoom(double zoom) {
+        Rectangle mainRect = profileField.getMainRect();
+        double viewHeight = mainRect.getHeight();
+
+        int numSamples = profileField.getMaxHeightInSamples();
+        double vScale = numSamples != 0
+                ? viewHeight / numSamples
+                : 0.0;
+
+        double minZoom = Math.log(vScale) / Math.log(ZOOM_A);
+        return Math.max(minZoom, zoom);
     }
 
     void updateScroll() {
@@ -271,7 +289,6 @@ public class GPRChart extends Chart {
             canvas.setWidth(width);
             canvas.setHeight(height);
             // fitFull();
-            System.out.println("change sizes: " + width + "x" + height);
         }
 
         BufferedImage bi = new BufferedImage(width, height, BufferedImage.TYPE_INT_RGB);
@@ -654,44 +671,66 @@ public class GPRChart extends Chart {
     }
 
     public void fitFull() {
-        setMiddleTrace(getField().getGprTracesCount() / 2);
-        fit(getField().getMaxHeightInSamples() * 2, getField().getGprTracesCount());
+        int middle = getField().getGprTracesCount() / 2;
+
+        setMiddleTrace(middle);
+        fit(getField().getMaxHeightInSamples(), 2 * middle);
     }
 
-    public void fit(int maxSamples, int tracesCount) {
-        double vertScale = 1.0;
-        if (getField().getViewDimension().height != 0) {
-            vertScale = (double) getField().getViewDimension().height
-                    / (double) maxSamples;
-        }
-        double zoom = Math.log(vertScale) / Math.log(ZOOM_A);
+    public void fit(int numSamples, int numTraces) {
+        Rectangle mainRect = profileField.getMainRect();
+        double viewWidth = mainRect.getWidth();
+        double viewHeight = mainRect.getHeight();
 
-        setZoom((int) zoom);
+        double vScale = numSamples != 0
+                ? viewHeight / numSamples
+                : 0.0;
+        double zoom = Math.log(vScale) / Math.log(ZOOM_A);
+        setZoom(zoom);
         setStartSample(0);
 
-        double h = 0.1;
-        if (getField().getViewDimension().width != 0) {
-            h = (double) (getField().getViewDimension().width
-                    - getField().getLeftRuleRect().width - 30)
-                    / ((double) tracesCount);
-        }
+        double hScale = numTraces != 0
+                ? viewWidth / numTraces
+                : 1.0;
 
-        double realAspect = h / getVScale();
+        double realAspect = hScale / getVScale();
         setRealAspect(realAspect);
     }
 
+    private void rescaleZoom(double widthBefore, double heightBefore) {
+        // update zoom scales according to changes of the viewport
+
+        double vScale = getVScale();
+        if (vScale == 0.0) {
+            vScale = 1.0;
+        }
+        int numSamples = (int) (heightBefore / vScale);
+
+        double hScale = getHScale();
+        if (hScale == 0.0) {
+            hScale = 1.0;
+        }
+        int numTraces = (int) (widthBefore / hScale);
+
+        fit(numSamples, numTraces);
+    }
+
     public int getFirstVisibleTrace() {
-        return Math.clamp(screenToTraceSample(new Point2D(- getField().getMainRect().width / 2, 0)).getTrace(),
-                0, getTracesCount() - 1);
+        double x = -getField().getMainRect().width / 2.0;
+        int trace = screenToTraceSample(new Point2D(x, 0)).getTrace();
+        return Math.clamp(trace, 0, getTracesCount() - 1);
     }
 
     public int getLastVisibleTrace() {
-        return Math.clamp(screenToTraceSample(new Point2D(getField().getMainRect().width / 2, 0)).getTrace(),
-                0, getTracesCount() - 1);
+        double x = profileField.getMainRect().width / 2.0;
+        int trace = screenToTraceSample(new Point2D(x, 0)).getTrace();
+        return Math.clamp(trace, 0, getTracesCount() - 1);
     }
 
-    public int getLastVisibleSample(int height) {
-        return screenToTraceSample(new Point2D( 0, height)).getSample();
+    public int getLastVisibleSample() {
+        double y = profileField.getMainRect().height + profileField.getTopMargin();
+        int sample = screenToTraceSample(new Point2D( 0, y)).getSample();
+        return Math.clamp(sample, 0, profileField.getMaxHeightInSamples() - 1);
     }
 
     public void setStartSample(int startSample) {
@@ -717,7 +756,7 @@ public class GPRChart extends Chart {
     }
 
     public TraceSample screenToTraceSample(Point2D point) {
-        int trace = getMiddleTrace() + (int) (-1 + (point.getX()) / getHScale());
+        int trace = getMiddleTrace() + (int) (point.getX() / getHScale());
         int sample = getStartSample() + (int) ((point.getY() - getField().getTopMargin()) / getVScale());
 
         return new TraceSample(trace, sample);
@@ -791,7 +830,7 @@ public class GPRChart extends Chart {
             return 0;
         }
         // correct out of range values to point to the first or last trace
-        index = Math.max(0, Math.min(index, values.size() - 1));
+        index = Math.clamp(index, 0, values.size() - 1);
         return values.get(index).getLineIndexOrDefault();
     }
 
@@ -807,13 +846,15 @@ public class GPRChart extends Chart {
 
         Range range = lineRanges.get(lineIndex);
 
-        int centerIndex = (int)range.getCenter();
-        setMiddleTrace(centerIndex);
-
         int maxSamples = profileField.getMaxHeightInSamples();
-        int tracesCount = range.getMax().intValue() - range.getMin().intValue() + 1;
+        int numTraces = range.getMax().intValue() - range.getMin().intValue() + 1;
+        // as middle trace is an exact half of the viewport
+        // num traces should be even to properly calculate horizontal scale factor
+        numTraces &= ~1;
 
-        fit(maxSamples, tracesCount);
+        setMiddleTrace(range.getMin().intValue() + numTraces / 2);
+        fit(maxSamples, numTraces);
+
         model.publishEvent(new WhatChanged(this, WhatChanged.Change.justdraw));
     }
 
